--- a/app/views/layouts/_usernavigation-side.html.erb
+++ b/app/views/layouts/_usernavigation-side.html.erb
@@ -2,7 +2,7 @@
     <div class="span3 sidebar">
         <img src="assets/userphoto-default.png">
         <div id="usercontainer">
-            <h2>Hi, <%= @user.first_name %></h2>
+            <h2><%= @user.first_name %></h2>
             <p><%= @user.address %></p>
         </div>        
       <ul class="nav nav-tabs sidetabs" id="sidenav" >
