--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -2,12 +2,12 @@
     <h1 class="center">Learning and Resources</h1>
                 <p class="lead center">Make staying prepared for wildfire fun and easy.<br><br></p>
 
-            <div class="sub-section">
-                <div class="task-butt">
-                    <hr></hr>
-                </div>
-            </div>  
-    <div class="subnav">
+        <div class="sub-section">
+            <div class="index-butt"> 
+                <hr></hr>
+            </div>
+        </div>  
+<!--     <div class="subnav">
       <ul class="nav nav-pills">
         <li><a href="#wui">WUI</a></li>
         <li><a href="#txwrap">TXWrap</a></li>
@@ -16,19 +16,35 @@
         <li><a href="#conditions">Local Conditions</a></li>
         <li><a href="#contact">Contact AFD</a></li>
       </ul>
-    </div>
+    </div> -->
 </header><!--
 Contact AFD
 -->
-<div class="column-wrapper">   
-    <div class="column-full reg">
-            <section  id="wui"><h2>What is the <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">Wildland Urban Interface?</a></h2>
-                <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p>
-            </section>    
+<div class="container-fluid">   
+        <div class="span10">    
+            <section  id="wui">
+            <img src="assets/wuihouse.png">
+                <h2>What is the <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">Wildland Urban Interface?</a></h2>
+                <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p><br><br>
+            </section>   
+    </div> 
+    <div class="sub-section">
+        <div class="index-butt"> 
+            <hr></hr>
+        </div>
+    </div>     
+    <div class="span5">
+            <section id="conditions">
+                <h2>Local Conditions</h2>
+                <p>Prepared.ly is meant to help you remain proactive by sending periodic, unobstrusive notifications. Stay tuned for alerts from AFD when there is a high wildfire risk due to weather or other circumstances, and for reminders of simple ways to remain prepared. You can set your alert preferences <a href="http://www.prepared.ly/users/edit">here</a>.
+                </p>
+            </section> 
             <section id="txwrap">
                 <h2>Texas Forest Service <a href="http://www.texaswildfirerisk.com">TxWRAP</a></h2>
                 <p>Find out more about locations in the Wildland Urban Interface, review detailed landscape characteristics, historical weather patterns and more.</p>   
-            </section>     
+            </section>    
+    </div>
+    <div class="span5"> 
             <section id="rsg">
                 <h2><a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a></h2>
                 <p>Austin and the Texas Forest Service (check) have produced the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> guide to help you prepare and respond during emergency situations. Read the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> PDF and make sure you've taken steps to avoid and prepare for emergencies. 
@@ -36,18 +52,21 @@ Contact AFD
                 <br />
                 Watch this <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short introductory video</a> illustrating the devastating speed of wildfires driven by winds and flying embers and <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">How To video</a>the Ready, Set, Go how-to video</a> to start preparing your home.</p>
             </section>
+        </div>
+    <div class="sub-section">
+        <div class="index-butt"> 
+            <hr></hr>
+        </div>
+    </div>         <div class="span5">
             <section id="firewise">
                 <h2>Become a Firewise Community</h2>
                 <p>If you live in an at-risk area or WUI, becoming a Firewise Community makes a big difference in insuring your area is safer. Learn about other Firewise Communities, organize a Firewise Day, create a community action plan and more.
                 <br />
                 <br />
                 <a href="http://www.firewise.org/Communities/USA-Recognition-Program/Program-criteria.aspx">Get started here</a> on the five steps to becoming a Firewise community. For step 1, contact <a href="../contacts/new">Austin Fire Department</a> or your <a href="http://submissions.nfpa.org/firewise/fw_state_liaisons.php">state liaison</a> if you're in a different area.</p>
-            </section>    
-            <section -d="conditions">
-                <h2>Local Conditions</h2>
-                <p>Prepared.ly is meant to help you remain proactive by sending periodic, unobstrusive notifications. Stay tuned for alerts from AFD when there is a high wildfire risk due to weather or other circumstances, and for reminders of simple ways to remain prepared. You can set your alert preferences <a href="http://www.prepared.ly/users/edit">here</a>.
-                </p>
-            </section>      
+            </section>  
+    </div>          
+    <div class="span5"> 
             <section id="contact">
                 <h2> Contact AFD</h2>
                 <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="../contacts/new">Ask a question here</a>.
