--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -1,66 +1,54 @@
-    <!DOCTYPE html>
-    <html>
-    <head>
-    
-      <title>Preparedly</title>
-      <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
-      <%= yield :stylesheet_yield %>
-        <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
-        <%= stylesheet_link_tag    "application", :media => "all" %>
-      <%= yield :fb_og_tags %>
-      <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 600px)" %>
-      <%= javascript_include_tag "application" %>
-      <%= csrf_meta_tags %>
-      <!-- Google Analytics -->
-        <script type="text/javascript">
-    
-          var _gaq = _gaq || [];
-          _gaq.push(['_setAccount', 'UA-30366897-1']);
-          _gaq.push(['_trackPageview']);
-    
-          (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-          })();
-    
-        </script>
-
-    </head>
-<body data-spy="scroll" data-target=".subnav" data-offset="100">
-<div class="container">
-  <div id="main-wrap">
-    <div id="beta">
-    </div>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button"class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <!-- Navgation -->
-            <div class="nav-collapse collapse">
-                <!--Upper NAVIGATION!-->
-                <ul class="nav navbar-items">
-                	<li class=""><a href="/"> home</a></li>
-					<li><%= link_to "learn", resources_path %></li> 
-					<li><%= link_to "about", about_path %></li>
-					<li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-						<li><%= render 'devise/menu/login_items' %></li>
-                        <!--<li><a href="#">dashboard</a></li>-->
-                      </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<!DOCTYPE html>
+<html xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
+<head>
+  <title>Preparedly</title>
+  <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
+  <%= yield :stylesheet_yield %>
+  <%= yield :fb_og_tags %>
+  <meta property="og:site_name" content="Prepared.ly"/>
+  <meta property="og:title" content="Prepared.ly" />
+  <meta property="og:image" content="/assets/preparedly-red.png"/>
+  <meta property="og:description"
+          content="Prepared.ly is a simple way for you to stay informed and proactive about the ongoing threat of wildfires."/>
+  <meta property="og:type" content="website" />
+  <%= stylesheet_link_tag "jquery-ui" %>
+  <%= stylesheet_link_tag "bootstrap", :media => "all" %>
+  <!--this must be third to last, add all others above this -->
+  <%= stylesheet_link_tag "application", :media => "all" %>
+  <!--this must be second to last -->
+  <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 600px)" %>
+  <!--this must be the last -->
+  <%= stylesheet_link_tag "bootstrap-responsive", :media => "all" %>
+</head>
+<body data-offset="50" data-target=".subnav" data-spy="scroll" data-twttr-rendered="true">
+<!-- navbar content -->
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <div class="container-fluid">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </a>
+        <% if user_signed_in? %> <!--show logo in nav for signed in users -->
+            <a class="brand" href="#"><img src="/assets/preparedly-nav-blue.png" width="119px" height="20px"></a>
+        <% end %>  
+        <div class="nav-collapse">
+          <ul class="nav navbar-items pull-right">
+            <li class=""><a href="/"> home</a></li>
+            <li><%= link_to "learn", resources_path %></li> 
+            <li><%= link_to "about", about_path %></li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <%= render 'devise/menu/login_items' %>
+              </ul>
+            </li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
   </div>
-</div>
 <!-- end Navgation -->
 <div class="container">
     <div id="about-green">
@@ -73,29 +61,38 @@
         </div>
     </div>
   </div>
-</div>    
-    <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    <%= yield :javascript_yield %>
-    <%= javascript_include_tag "application" %>
-    <script type="text/javascript" charset="utf-8">
-$('.dropdown-toggle').dropdown();
-$('#navbar').scrollspy();
-$(document).scroll(function(){
-    // If has not activated (has no attribute "data-top"
-    if (!$('.subnav').attr('data-top')) {
-        // If already fixed, then do nothing
-        if ($('.subnav').hasClass('subnav-fixed')) return;
-        // Remember top position
-        var offset = $('.subnav').offset()
-        $('.subnav').attr('data-top', offset.top);
-    }
+</div> 
+<div id="signin" class="modal hide fade">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">&times;</button>
+    <h3>Sign in</h3>
+      <div class="modal-body">
+        <p> <%= render :partial => 'devise/sessions/login' %> </p> 
+      </div>
+  </div>  
+  <div class="modal-footer">
+  <a href="#" class="btn" data-dismiss="modal">Close</a>
+  </div> 
+</div>
+<!-- Google Analytics -->
+<!-- Typekit -->
+<script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-    if ($('.subnav').attr('data-top') - $('.subnav').outerHeight() <= $(this).scrollTop())
-        $('.subnav').addClass('subnav-fixed');
-    else
-        $('.subnav').removeClass('subnav-fixed');
-});
-</script>
-    </body>
-    </html>
+<%= yield :javascript_yield %> 
+<%= javascript_include_tag "application" %>
+<script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-30366897-1']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+</script>   
+</body>
+</html>
