--- a/app/views/devise/_links.erb
+++ b/app/views/devise/_links.erb
@@ -1,9 +1,9 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Sign in", new_session_path(resource_name) %><br />
+  <%= link_to "Existing user? Sign in", new_session_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <%= link_to "New user? Sign up", new_registration_path(resource_name) %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
@@ -17,14 +17,16 @@
 	  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 	<% end -%>
 
-<%- if devise_mapping.omniauthable? %>
- <%- User.omniauth_providers.each do |provider| %>
-	  	 <%- if (provider.to_s == "google_oauth2" ) %>
-				<%= provider_icon "google_oauth2" %>
-	    	<%= link_to "Sign in with Google", user_omniauth_authorize_path(provider) %><br />
-				<% next %>   
-			<% end -%>
-	    <%= provider_icon provider %>
-	    <%= link_to "Sign in with #{provider.to_s.titleize}", user_omniauth_authorize_path(provider) %><br />
-	  <% end -%>
-<% end -%>
+<p style="text-align: left">
+	<%- if devise_mapping.omniauthable? %>
+	 <%- User.omniauth_providers.each do |provider| %>
+		  	 <%- if (provider.to_s == "google_oauth2" ) %>
+					<%= provider_icon "google_oauth2" %>
+		    	<%= link_to "Sign in with Google", user_omniauth_authorize_path(provider) %><br />
+					<% next %>   
+				<% end -%>
+		    <%= provider_icon provider %>
+		    <%= link_to "Sign in with #{provider.to_s.titleize}", user_omniauth_authorize_path(provider) %><br />
+		  <% end -%>
+	<% end -%>
+</p>
