--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,6 @@
-<legend>Sign up</legend>
+<h1>Sign up</h1>
+<h4>Creating an account enables you to track your progress and schedule reminders for completing wildfire prevention tasks, contact wildfire experts for advice, share with neighbors and view risk information for your area.</h4>
+<br>
         <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
     <div>
