some small image changes and added tab to account section

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -47,10 +47,12 @@
             </div>  
     </section>
     <section id="mapsection">       
-            <h2> Enter your address, and see your house on the map.</h2> 
+            <img src="assets/map.jpg" class="pull-left">
+            <div class="span4">
+                <h2> Enter your address, and see your house on the map.</h2> 
             <p>You'll also see an assessment of your risk level, current weather conditions, and burn ban information.
             </p>
-            <img src="assets/map.jpg">
+            </div>
             <div class="sub-section">
                 <div class="index-butt">
                     <%= link_to ' get prepared '.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
