--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -25,7 +25,7 @@ Contact AFD
             <section  id="wui">
             <img src="assets/wuihouse.png">
                 <h2>What is the <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">Wildland Urban Interface?</a></h2>
-                <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p><br><br>
+                <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p><br>
             </section>   
     </div> 
     <div class="sub-section">
