add About Burn Ban info on mapinfo partial, show/hide section in post.js.erb, show feed updated from map controller

--- a/app/views/map/post.js.erb
+++ b/app/views/map/post.js.erb
@@ -20,11 +20,17 @@ $("#mapinfo").html("<%= escape_javascript(render(:partial => 'map/mapinfo')) %>"
 
     $("#warnings-trigger").click(function(e){
       $("#warnings").show();
-      //$("#map").hide();
     });
 
     $("#remove-warnings").click(function(e){
      $("#warnings").hide();
-      $("#map").show();
+    });
+
+    $("#bans-trigger").click(function(e){
+      $("#bans").show();
+    });
+
+    $("#remove-bans").click(function(e){
+     $("#bans").hide();
     });
   });
