--- a/app/views/map/_mapinfo.html.erb
+++ b/app/views/map/_mapinfo.html.erb
@@ -1,6 +1,6 @@
 <!-- //////////////// MAP ////////////////////// -->
 
-<div id="map">MAP SHOULD INSERT HERE</div>
+<div id="map">Map inserts here</div>
 
 <div id="map-controls">
     <input type="checkbox" id="firestations" name="firestations" checked="checked" />&nbsp;<label for="firestations" class="note">Show Fire Stations</label>
@@ -8,64 +8,60 @@
 </div> 
 <div class="contentbox">
     <!-- //////////////// table ////////////////////// -->
-            <h4 id="address"><%= @address.address %></h4>
-            <hr>
-                <ul>
-                    <li class="condition-type">
-                    Risk of this location:
-                
-                <% if @risk_level %>  
-                    <span class="risk risk-<%= @risk_level %>" id="risk-text"><%= @risk_text %></span>
-                    </li>
-                <% else %>
-                  <li class="condition-type">No risk data is available at this location
-                  </li>
-                <% end %>
-                    <li class="condition-type">Inside of a Burn Ban:
-                    <span class="condition" id="inside-burnban"> 
-                        <%= @inside_burnban %></span>
-                    </li>
-                    <li class="condition-type">NWS Weather Warning:
-                    <span class="condition" id="inside-nws"> <%= @inside_nws %>
-                    </span>
-                    </li>
-              <li class="note" id="warnings-trigger">Read current warnings</li>
-                        <div id="warnings"  style="display: none;">
-                          <h2>National Weather Service Warnings In Your Area</h2>
-                          <% @warnings.each do |w| -%>
-                            <%= w.css("title").text -%><br />
-                            <strong>Summary: </strong> <%= w.css("summary").text -%><br />
-                            <strong>Urgency: </strong> <%= w.css("urgency").text -%><br />
-                            <strong>Severity: </strong> <%= w.css("severity").text -%><br />
-                            <strong>Certainty: </strong> <%= w.css("certainty").text -%><br />
-                            <strong>Affected counties: </strong> <%= w.css("areaDesc").text -%><br />
-                          <% end %>
-                            <span class="note" id="remove-warnings">hide warnings</span>
-                        </div>
-                    <li>
-                        <h2>Weather</h2>
-                        <hr>
-                    </li>
-                <li class="condition-type">Wind: 
-                <span id="wind-conditions"><%= @wind_conditions %>
-                </li>
+    <h4 id="address"><%= @address.address %></h4>
+    <hr>
+    <ul>
+        <li class="condition-type">Risk of this location:
+            <% if @risk_level %>  
+            <span class="risk risk-<%= @risk_level %>" id="risk-text"><%= @risk_text %></span>
+        </li>
+        <% else %>
+        <li class="condition-type">No risk data is available at this location</li>
+        <% end %>
+        <li class="condition-type">Inside of a Burn Ban:
+            <span class="condition" id="inside-burnban"><%= @inside_burnban %></span>
+        </li>
+        <li class="note" id="bans-trigger"><u>About burn bans</u></li>
+            <div id="bans"  style="display: none;">
+                <h2>About burn bans</h2>
+                <p>Burn ban information is imported from an <a href="http://tfsfrp.tamu.edu/wildfires/BurnBan.xml" target="_BLANK">XML data feed</a> provided by the Texas Forest Service. The feed lists counties with a current burn ban in effect, and we provide a Yes or No above for your county using the most current XML feed. The feed was updated on <%= @burnban_updated %>; view the Texas Forest Service's map <a href="http://tfsfrp.tamu.edu/wildfires/decban.png" target="_BLANK">here</a>, it is often a day or so more up-to-date than the feed.</p>
+                <span class="note" id="remove-bans">hide burn ban info</span>
+            </div>
+        <li class="condition-type">NWS Weather Warning:
+            <span class="condition" id="inside-nws"> <%= @inside_nws %></span>
+        </li>
+        <li class="note" id="warnings-trigger"><u>Read current warnings for your county</u></li>
+            <div id="warnings"  style="display: none;">
+              <h2>National Weather Service Warnings In Your Area</h2>
+              <% @warnings.each do |w| -%>
+                <%= w.css("title").text -%><br />
+                <strong>Summary: </strong> <%= w.css("summary").text -%><br />
+                <strong>Urgency: </strong> <%= w.css("urgency").text -%><br />
+                <strong>Severity: </strong> <%= w.css("severity").text -%><br />
+                <strong>Certainty: </strong> <%= w.css("certainty").text -%><br />
+                <strong>Affected counties: </strong> <%= w.css("areaDesc").text -%><br />
+              <% end %>
+                <span class="note" id="remove-warnings">hide warnings</span>
+            </div>
+        <li><h2>Weather</h2><hr></li>
+        <li class="condition-type">Wind: <span id="wind-conditions"><%= @wind_conditions %></li>
+        <li class="condition-type">Humidity:
+            <span id="relative-humidity"> 
+            <%= @relative_humidity %></span>
+        </li>
+    </ul>
+</div>    
 
-                <li class="condition-type">Humidity:
-                <span id="relative-humidity"> 
-                    <%= @relative_humidity %></span>
-                </li>
-            </ul>
-    </div>    
+<div class="contentbox contentbox-short">
+    <h2> About Risk Level</h2>
+    <p>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
+    Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
+    The FIS quantifies potential fire intensity based on high to extreme weather 
+    conditions, fuels, and topography.<br><br>
+     <a href="http://www.texaswildfirerisk.com/Map" target="blank"> go to TxWRAP site</a>
+     </p>
+</div>    
 
-    <div class="contentbox contentbox-short">
-        <h2> About Risk Level</h2>
-        <p>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
-        Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
-        The FIS quantifies potential fire intensity based on high to extreme weather 
-        conditions, fuels, and topography.<br><br>
-         <a href="http://www.texaswildfirerisk.com/Map" target="blank"> go to TxWRAP site</a>
-         </p>
-    </div>    
 <script>
    var fire_stations = <%=raw @fs.to_json %>;
    var address_location = {lat: <%=@address.latlon.y %>, lon: <%=@address.latlon.x %>};
