--- a/app/views/devise/registrations/_edit.html.erb
+++ b/app/views/devise/registrations/_edit.html.erb
@@ -17,7 +17,7 @@
       <div><%= f.label :address %><br />
       <%= f.text_field :address %></div>
     
-      <div><%= f.check_box :sms_opt_in %> <%= f.label 'Check to receive SMS notifications' %></div>
+      <div><%= f.check_box :sms_opt_in %> <%= f.label 'Check to receive SMS (text message) notifications' %></div>
     
       <div><%= f.label :password %> <span class="note">(leave blank if you don't want to change it)</span><br />
       <%= f.password_field :password, :autocomplete => "off" %></div>
