--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,7 +84,7 @@
     <section id="accountsection"> 
                 <h2> Create an account, keep track of your progress</h2>
 
-                <p>Now that we've told you a little about Prepared.ly and what we do, continue on the check out our features by creating a free account. Also, feel free to leave us comments and questions with the "feedback" tab on the left side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
+                <p>Now that we've told you a little about Prepared.ly and what we do, continue on to check out our features by creating a free account. Also, feel free to leave us comments and questions via the "feedback" tab on the right side of the page, or send us an email at <a href="mailto:austin@codeforamerica.org">austin@codeforamerica.org</a> at any time.</p>
                 <p> Interested in launching prepared.ly in your state, city or neighborhood? Get in touch. </p>
                 <p>
                 <a href="https://docs.google.com/a/codeforamerica.org/spreadsheet/viewform?formkey=dGdNS1BCMU1wMVZYNzNiN2k2anI0MWc6MQ#gid=0" target="blank"> I want to bring Prepared.ly to my community.</a>
