--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,6 +1,6 @@
 <header class="jumbotron subhead" id="overview">
     <h1 class="center">Learning and Resources</h1>
-                <p class="lead center">Make staying prepared for wildfire fun and easy.<br><br></p>
+                <p class="lead center">Make staying prepared for wildfire easy.<br><br></p>
 
         <div class="sub-section">
             <div class="index-butt"> 
@@ -28,15 +28,16 @@ Contact AFD
                 <p>A <a href="http://wildlandfirersg.org/Learn/content.cfm?ItemNumber=646&navItemNumber=505">wildland–urban interface</a> refers to the zone of transition between unoccupied land and human development. Communities that are within 0.5 miles (0.80 km) of the zone may also be included. These lands and communities adjacent to and surrounded by wildlands are at risk of wildfires.</p><br>
             </section>   
     </div> 
-    <div class="sub-section">
+   <!-- Commented this out b/c it was running into then appearing behind the image
+     <div class="sub-section">
         <div class="index-butt"> 
             <hr></hr>
         </div>
-    </div>     
+    </div>      -->
     <div class="span5">
             <section id="conditions">
                 <h2>Local Conditions</h2>
-                <p>Prepared.ly is meant to help you remain proactive by sending periodic, unobstrusive notifications. Stay tuned for alerts from AFD when there is a high wildfire risk due to weather or other circumstances, and for reminders of simple ways to remain prepared. You can set your alert preferences <a href="http://www.prepared.ly/users/edit">here</a>.
+                <p>Prepared.ly is meant to help you remain proactive by sending periodic, unobstrusive notifications. Stay tuned for alerts from AFD when there is a high wildfire risk due to weather or other circumstances, and for reminders of simple ways to remain prepared. You can set your alert preferences <%= link_to 'here', edit_user_registration_path %>.
                 </p>
             </section> 
             <section id="txwrap">
@@ -50,14 +51,16 @@ Contact AFD
                 <p>Austin and the Texas Forest Service (check) have produced the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> guide to help you prepare and respond during emergency situations. Read the <a href="http://www.austinhsem.com/clients/2333/429471.pdf">Ready, Set, Go!</a> PDF and make sure you've taken steps to avoid and prepare for emergencies. 
                 <br />
                 <br />
-                Watch this <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short introductory video</a> illustrating the devastating speed of wildfires driven by winds and flying embers and <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">How To video</a>the Ready, Set, Go how-to video</a> to start preparing your home.</p>
+                Watch this <a href="http://www.youtube.com/watch?v=1EtXNUeBG8M">short Ready, Set, Go! introductory video</a> about the devastating speed of wildfires driven by winds and flying embers, then begin preparing your home with the tips in this <a href="http://www.youtube.com/watch?v=MN8Kre62nz4">Ready, Set, Go! how-to video</a>.</p>
+                <br />
             </section>
         </div>
     <div class="sub-section">
         <div class="index-butt"> 
             <hr></hr>
         </div>
-    </div>         <div class="span5">
+    </div>         
+    <div class="span5">
             <section id="firewise">
                 <h2>Become a Firewise Community</h2>
                 <p>If you live in an at-risk area or WUI, becoming a Firewise Community makes a big difference in insuring your area is safer. Learn about other Firewise Communities, organize a Firewise Day, create a community action plan and more.
@@ -71,7 +74,7 @@ Contact AFD
                 <h2> Contact AFD</h2>
                 <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="../contacts/new">Ask a question here</a>.
                 </p>
-             <section>      
+             </section>      
         </div>  
      </div> <!--end column-full-->    
 </div> <!--end column wrapper-->
