update Your Account tasks list to have check marks and remove formatting

--- a/app/views/layouts/_dashboard.html.erb
+++ b/app/views/layouts/_dashboard.html.erb
@@ -95,7 +95,7 @@
                                 <li>saved address: <%= @user.address %></li>
                                 <li>date account created: <%= @user.created_at.to_formatted_s(:long) %></li>
                                 <ul>my completed tasks: <% @tasks.each do |task| %>
-                                    <li><%= task %></li>
+                                    <li><% unless task.blank? %> <%= task.to_s.gsub('["', '').gsub('"]','') %> &#10003;<% end %></li>
                                     <% end %>
                                 </ul>
                                 <ul>my comments: <% @comments.each do |comment| %>
