--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -29,7 +29,7 @@ and work with experts to make your neighborhood Firewise.</h3>
   </div>
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :rows => '15' %>
   </div>
   <div class="actions" >
     <%= f.submit "Submit", :class => "btn btn-success btn" %>
