something on index page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -31,14 +31,12 @@
     </header>
 <div class="container-fluid">
     <section id="intro">  
-           
-            <h2> Nice to meet you. Check out our video!</h2>
+           <h2>In 2011, over 1300 homes were destroyed in Bastrop County due to wildfire.</h2>
             <div class="video">
                 <iframe src="http://player.vimeo.com/video/44008140" width="500" height="281" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> 
                 <p><a href="http://vimeo.com/44008140">Prepared.ly</a> from <a href="http://vimeo.com/codeforamerica">Code for America</a> on <a href="http://vimeo.com">Vimeo</a>.</p>
             </div>
-            <br><br>
-            <p>Get to know Prepared.ly a little better by checking out our video. We're brought to you by the City of Austin and Code for America, and we're here to help you stay more prepared for wildfire.</p>
+            <p>We don’t want that to happen to you. We’ve developed an easy-to-use application that brings together a variety of checklists and fire tools, and gives them to you in a manageable, timely, and actionable form. Get to know Prepared.ly a little better by checking out our video. We're brought to you by the City of Austin and Code for America, and we're here to help you stay more prepared for wildfire.</p>
             <div class="sub-section">
                 <div class="index-butt">
                     <%= link_to ' explore your location '.html_safe,  new_user_registration_path, :class => 'btn-large btn-success btn' %>
